# bovenzo-cli

./: .pypirc  README.md  bovenzo.py  setup.cfg  setup.py
bovenzo_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: bovenzo.py
src/bovenzo_cli.egg-info/: PKG-INFO  SOURCES.txt
