[metadata]
name = bovenzo-cli
version = 0.1.0-rc
author = Alisson Desandro Bovenzo
author_email = bovenzo@astrahus.tech
description = This package provides one cli with commands used commonly by Bovenzo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alissonbovenzo/bovenzo-cli
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src